Jira-ID: CRNT-30200 Fixed - When any Pepper View is opened and closed it adds one line break at the top
git-svn-id: https://svn.csa.sungard.com/repos/ipp2/product/trunk/stardust/ui.web@66849 8100b5e0-4d52-466c-ae9c-bdeccbdeaf6b

--- a/web-modeler/src/main/resources/META-INF/xhtml/css/lightdust.css
+++ b/web-modeler/src/main/resources/META-INF/xhtml/css/lightdust.css
@@ -18,7 +18,7 @@
 .nativeHtmlViewPanel {
 	width: 100%;
 	overflow: auto;
-	margin: 10px;
+	margin-left: 10px;
 }
  
 label {
